--- a/encyclopedia/templates/encyclopedia/content.html
+++ b/encyclopedia/templates/encyclopedia/content.html
@@ -9,6 +9,7 @@
     {% if page_body is None %}
         <span class="default-error-message">Page {{ title }} Not found</span>
     {% else %}
+        <a href="./edit/{{ title }}">Edit</a>
         {{ page_body }}
     {% endif %}
 
