Bug fix when editing after adding new file

--- a/encyclopedia/templates/encyclopedia/content.html
+++ b/encyclopedia/templates/encyclopedia/content.html
@@ -10,7 +10,7 @@
         <span class="default-error-message">Page {{ title }} Not found</span>
     {% else %}
         {{ page_body|safe }}
-        <a href="./edit/{{ title }}">Edit</a>
+        <a href="edit/{{ title }}">Edit</a>
     {% endif %}
 
 {% endblock %}
